tests/netgen/spider/errors/arm_number_2/errors.netgen
Error: Spider networks need at least 3 arms.
Quitting (on error).
